# email-triage-env

./: Dockerfile  README.md  __init__.py  app.py  client.py  email_triage_env.py  graders.py  inference.py  models.py  openenv.yaml  push_it.py  pyproject.toml  requirements.txt  tasks.py
Tasks/: tasks.py
email_triage_env/: graders.py  tasks.py
email_triage_env/server/: inference.py
server/: Dockerfile  __init__.py  app.py  email_triage_env.py  inference.py
